# image-similarity-search

./: .gitignore  README.md  pyproject.toml  pyrightconfIg.json  requirements.txt
app/: main.py
app/core/: app_setup.py  config.py  dependencies.py  logger.py
app/middleware/: errors_handling_middleware.py
app/routers/: images.py
app/schemas/: image.py
app/services/: image_search.py  search_services.py
app/validators/: upload_image_validator.py
docker/: .Dockerignore  Dockerfile  docker-compose.yml
frontend/: index.html
frontend/src/: main.js
scripts/: embedding_generator.py
tests/: test_upload_image.py
